completed ai news end to end project

--- a/AgenticChatBot/src/langgraphAgenticAI/ui/uiconfig.ini
+++ b/AgenticChatBot/src/langgraphAgenticAI/ui/uiconfig.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
 PAGE_TITLE = LangGraph: Build Stateful Agents AI LangGraph
 LLM_OPTIONS = Groq
-USECASE_OPTIONS = Basic Chatbot, Chatbot With tool, AI News, Blog Generator
+USECASE_OPTIONS = Basic Chatbot, Chatbot With Web, AI News, Blog Generator
 GROQ_MODEL_OPTIONS = openai/gpt-oss-20b, openai/gpt-oss-120b, llama-3.1-8b-instant, llama-3.3-70b-versatile
