--- a/AgenticChatBot/pyproject.toml
+++ b/AgenticChatBot/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "langchain-openai (>=1.0.2,<2.0.0)",
     "faiss-cpu (>=1.12.0,<2.0.0)",
     "streamlit (>=1.51.0,<2.0.0)",
-    "langchain-tavily (>=0.2.13,<0.3.0)"
+    "langchain-tavily (>=0.2.13,<0.3.0)",
+    "tavily (>=1.1.0,<2.0.0)"
 ]
 
 
