--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,22 @@
 [project]
-name = "agentic-ai"
+name = "agentic-ai-course-udemy"
 version = "0.1.0"
-description = ""
-authors = [
-    {name = "Your Name",email = "you@example.com"}
-]
+description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12, <3.15"
+requires-python = ">=3.12"
 dependencies = [
-    "langchain (>=1.0.3,<2.0.0)",
-    "langgraph (>=1.0.2,<2.0.0)",
-    "ipykernel (>=7.1.0,<8.0.0)",
-    "typing-extensions (>=4.15.0,<5.0.0)",
-    "dotenv (>=0.9.9,<0.10.0)",
-    "python-dotenv (>=1.2.1,<2.0.0)",
-    "langchain-groq (>=1.0.0,<2.0.0)",
-    "langchain-openai (>=1.0.1,<2.0.0)",
-    "langchain-community (>=0.4.1,<0.5.0)",
-    "arxiv (>=2.3.0,<3.0.0)",
-    "wikipedia (>=1.4.0,<2.0.0)",
-    "langchain-tavily (>=0.2.12,<0.3.0)",
-    "langgraph-cli[inmem] (>=0.4.7,<0.5.0)",
-    "faiss-cpu (>=1.12.0,<2.0.0)"
+    "arxiv>=2.3.0",
+    "faiss-cpu>=1.12.0",
+    "ipykernel>=7.1.0",
+    "langchain>=1.0.5",
+    "langchain-community>=0.4.1",
+    "langchain-groq>=1.0.0",
+    "langchain-openai>=1.0.2",
+    "langchain-tavily>=0.2.13",
+    "langgraph>=1.0.3",
+    "langgraph-cli[inmem]>=0.4.7",
+    "python-dotenv>=1.2.1",
+    "typing-extensions>=4.15.0",
+    "wikipedia>=1.4.0",
 ]
 
-
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
